--- a/conf/fang.yaml
+++ b/conf/fang.yaml
@@ -39,7 +39,198 @@ gameloop:
   - content: PIC_SPEEK_B_RIGHT
     position: POSITION_SPEEK
     size: SIZE_WINDOW
+- type: activity
+  activity: Text
+  background: WHITE
+  animateIn:
+    animate: activityLinearMove
+    start: (-1,0)
+    end: (0,0)
+  texts:
+  - content: 是啊 我介绍一下自己吧
+    position: (CENTER,LINE_2)
+  - content: 我叫小葶
+    position: (CENTER,LINE_1)
+  pics:
+  - content: WHITE
+  - content: PIC_TING_MAD
+    position: POSITION_TALK_TING
+    size: SIZE_WINDOW
+  - content: PIC_SPEEK_P_LEFT
+    position: POSITION_SPEEK
+    size: SIZE_WINDOW
+- type: activity
+  activity: Text
+  background: WHITE
+  texts:
+  - content: 其实探探上是我姐妹
+    position: (CENTER,LINE_2)
+  - content: 她拿我的照片出去招摇撞骗
+    position: (CENTER,LINE_1)
+  pics:
+  - content: WHITE
+  - content: PIC_TING_MAD
+    position: POSITION_TALK_TING
+    size: SIZE_WINDOW
+  - content: PIC_SPEEK_P_LEFT
+    position: POSITION_SPEEK
+    size: SIZE_WINDOW
+- type: activity
+  activity: Text
+  background: WHITE
+  texts:
+  - content: 像我这种正经女孩是..
+    position: (CENTER,LINE_2)
+  pics:
+  - content: WHITE
+  - content: PIC_TING_MAD
+    position: POSITION_TALK_TING
+    size: SIZE_WINDOW
+  - content: PIC_SPEEK_P_LEFT
+    position: POSITION_SPEEK
+    size: SIZE_WINDOW
+- type: activity
+  activity: Text
+  background: WHITE
+  animateIn:
+    animate: activityLinearMove
+    start: (1,0)
+    end: (0,0)
+  texts:
+  - content: 等等！
+    position: (CENTER,LINE_2)
+  - content: 正经女孩 ？？？
+    position: (CENTER,LINE_1)
+  pics:
+  - content: WHITE
+  - content: PIC_TALK_FANG
+    position: POSITION_TALK_FANG
+    size: SIZE_WINDOW
+  - content: PIC_SPEEK_B_RIGHT
+    position: POSITION_SPEEK
+    size: SIZE_WINDOW
+- type: activity
+  activity: Text
+  background: WHITE
+  texts:
+  - content: 正经女孩是不是
+    position: (CENTER,LINE_2)
+  - content: 忘记我是谁了哦
+    position: (CENTER,LINE_1)
+  pics:
+  - content: WHITE
+  - content: PIC_TALK_FANG
+    position: POSITION_TALK_FANG
+    size: SIZE_WINDOW
+  - content: PIC_SPEEK_B_RIGHT
+    position: POSITION_SPEEK
+    size: SIZE_WINDOW
+- type: activity
+  activity: Text
+  background: WHITE
+  animateIn:
+    animate: activityLinearMove
+    start: (-1,0)
+    end: (0,0)
+  texts:
+  - content: 等等你是？小方！！！
+    position: (CENTER,LINE_2)
+  - content: 几年不见我差点没认出来诶
+    position: (CENTER,LINE_1)
+  pics:
+  - content: WHITE
+  - content: PIC_TING_MAD
+    position: POSITION_TALK_TING
+    size: SIZE_WINDOW
+  - content: PIC_SPEEK_P_LEFT
+    position: POSITION_SPEEK
+    size: SIZE_WINDOW
+- type: activity
+  activity: Text
+  background: WHITE
+  texts:
+  - content: 我...
+    position: (CENTER,LINE_2)
+  - content: 其实...想说...
+    position: (CENTER,LINE_1)
+  pics:
+  - content: WHITE
+  - content: PIC_TING_MAD
+    position: POSITION_TALK_TING
+    size: SIZE_WINDOW
+  - content: PIC_SPEEK_P_LEFT
+    position: POSITION_SPEEK
+    size: SIZE_WINDOW
+# -------------------------------------------------CHOICE
+- type: activity
+  activity: Choice
+  background: WHITE
+  texts:
+  - content: A 一直没有男朋友
+    position: (CENTER,LINE_2)
+  - content: B 幸亏和你分手了
+    position: (CENTER,LINE_1)
+  pics:
+  - content: WHITE
+  - content: PIC_TING_MAD
+    position: POSITION_TALK_TING
+    size: SIZE_WINDOW
+  - content: PIC_SPEEK_P_LEFT
+    position: POSITION_SPEEK
+    size: SIZE_WINDOW
+- type: goto
+  if: CHOICE_A
+  goto_tag: no_boy_friend
+- type: goto
+  if: CHOICE_B
+  goto_tag: happy_all_the_time
 
+# 分支 一直没有男朋友
+- type: activity
+  activity: Text
+  tag: no_boy_friend
+  background: WHITE
+  texts:
+  - content: 分开之后一直自己一个人
+    position: (CENTER,LINE_2)
+  - content: 感觉也挺开心的
+    position: (CENTER,LINE_1)
+  pics:
+  - content: WHITE
+  - content: PIC_TING_MAD
+    position: POSITION_TALK_TING
+    size: SIZE_WINDOW
+  - content: PIC_SPEEK_P_LEFT
+    position: POSITION_SPEEK
+    size: SIZE_WINDOW
+- type: activity
+  activity: Text
+  background: WHITE
+  texts:
+  - content: 不！
+    position: (CENTER,LINE_2)
+  - content: 是非常开心
+    position: (CENTER,LINE_1)
+  pics:
+  - content: WHITE
+  - content: PIC_TING_MAD
+    position: POSITION_TALK_TING
+    size: SIZE_WINDOW
+  - content: PIC_SPEEK_P_LEFT
+    position: POSITION_SPEEK
+    size: SIZE_WINDOW
+
+
+# 分支 一直没有男朋友 DONE
+
+# 分支 一直很开心
+- type: activity
+  activity: Text
+  tag: happy_all_the_time
+  background: WHITE
+
+
+# 分支 一直很开心 DONE
 
 # rechoose man
 - type: goto
