fix bug--cannot return from setting view

--- a/conf/start.yaml
+++ b/conf/start.yaml
@@ -13,6 +13,7 @@ gameloop:
     end: (0,1)
 - type: activity
   activity: Text
+  background: BROWN
   animateIn:
     animate: activityLinearMove
     start: (0,1)
