--- a/conf/fang.yaml
+++ b/conf/fang.yaml
@@ -161,361 +161,9 @@ gameloop:
   - content: PIC_SPEEK_P_LEFT
     position: POSITION_SPEEK
     size: SIZE_WINDOW
-# -------------------------------------------------CHOICE
-- type: activity
-  activity: Choice
-  background: WHITE
-  texts:
-  - content: A 一直没有男朋友
-    position: (CENTER,LINE_2)
-  - content: B 幸亏和你分手了
-    position: (CENTER,LINE_1)
-  pics:
-  - content: WHITE
-  - content: PIC_TING_MAD
-    position: POSITION_TALK_TING
-    size: SIZE_WINDOW
-  - content: PIC_SPEEK_P_LEFT
-    position: POSITION_SPEEK
-    size: SIZE_WINDOW
-- type: goto
-  if: CHOICE_A
-  goto_tag: no_boy_friend
-- type: goto
-  if: CHOICE_B
-  goto_tag: happy_all_the_time
 
-# 分支 一直没有男朋友
-- type: activity
-  activity: Text
-  tag: no_boy_friend
-  background: WHITE
-  texts:
-  - content: 分开之后一直自己一个人
-    position: (CENTER,LINE_2)
-  - content: 感觉也挺开心的
-    position: (CENTER,LINE_1)
-  pics:
-  - content: WHITE
-  - content: PIC_TING_MAD
-    position: POSITION_TALK_TING
-    size: SIZE_WINDOW
-  - content: PIC_SPEEK_P_LEFT
-    position: POSITION_SPEEK
-    size: SIZE_WINDOW
-- type: activity
-  activity: Text
-  background: WHITE
-  texts:
-  - content: 不！
-    position: (CENTER,LINE_2)
-  - content: 是非常开心
-    position: (CENTER,LINE_1)
-  pics:
-  - content: WHITE
-  - content: PIC_TING_MAD
-    position: POSITION_TALK_TING
-    size: SIZE_WINDOW
-  - content: PIC_SPEEK_P_LEFT
-    position: POSITION_SPEEK
-    size: SIZE_WINDOW
-- type: activity
-  activity: Text
-  background: WHITE
-  animateIn:
-    animate: activityLinearMove
-    start: (1,0)
-    end: (0,0)
-  texts:
-  - content: 哦
-    position: (CENTER,LINE_2)
-  - content: (尬住)
-    position: (CENTER,LINE_1)
-  pics:
-  - content: WHITE
-  - content: PIC_TALK_FANG
-    position: POSITION_TALK_FANG
-    size: SIZE_WINDOW
-  - content: PIC_SPEEK_B_RIGHT
-    position: POSITION_SPEEK
-    size: SIZE_WINDOW
+
 - type: goto
   if: True
-  goto_tag: not_talk
-
-# 分支 一直没有男朋友 DONE
-
-# 分支 一直很开心
-- type: activity
-  activity: Text
-  tag: happy_all_the_time
-  background: WHITE
-  texts:
-  - content: 幸亏
-    position: (CENTER,LINE_2)
-  - content: 和你分开了哈
-    position: (CENTER,LINE_1)
-  pics:
-  - content: WHITE
-  - content: PIC_TING_MAD
-    position: POSITION_TALK_TING
-    size: SIZE_WINDOW
-  - content: PIC_SPEEK_P_LEFT
-    position: POSITION_SPEEK
-    size: SIZE_WINDOW
-- type: activity
-  activity: Text
-  background: WHITE
-  animateIn:
-    animate: activityLinearMove
-    start: (1,0)
-    end: (0,0)
-  texts:
-  - content: 怎么这么说话
-    position: (CENTER,LINE_2)
-  - content: 这么说我很没面子的
-    position: (CENTER,LINE_1)
-  pics:
-  - content: WHITE
-  - content: PIC_TALK_FANG
-    position: POSITION_TALK_FANG
-    size: SIZE_WINDOW
-  - content: PIC_SPEEK_B_RIGHT
-    position: POSITION_SPEEK
-    size: SIZE_WINDOW
-- type: activity
-  activity: Text
-  background: WHITE
-  animateIn:
-    animate: activityLinearMove
-    start: (1,0)
-    end: (0,0)
-  texts:
-  - content: 其实也挺感谢你的
-    position: (CENTER,LINE_2)
-  pics:
-  - content: WHITE
-  - content: PIC_TING_MAD
-    position: POSITION_TALK_TING
-    size: SIZE_WINDOW
-  - content: PIC_SPEEK_P_LEFT
-    position: POSITION_SPEEK
-    size: SIZE_WINDOW
-- type: activity
-  activity: Text
-  background: WHITE
-  animateIn:
-    animate: activityLinearMove
-    start: (1,0)
-    end: (0,0)
-  texts:
-  - content: 莫名其妙
-    position: (CENTER,LINE_2)
-  - content: 感谢我什么
-    position: (CENTER,LINE_1)
-  pics:
-  - content: WHITE
-  - content: PIC_TALK_FANG
-    position: POSITION_TALK_FANG
-    size: SIZE_WINDOW
-  - content: PIC_SPEEK_B_RIGHT
-    position: POSITION_SPEEK
-    size: SIZE_WINDOW
-- type: activity
-  activity: Text
-  background: WHITE
-  animateIn:
-    animate: activityLinearMove
-    start: (1,0)
-    end: (0,0)
-  texts:
-  - content: 感谢你放手啊
-    position: (CENTER,LINE_2)
-  - content: 不然不就栽在你手里了
-    position: (CENTER,LINE_1)
-  pics:
-  - content: WHITE
-  - content: PIC_TING_MAD
-    position: POSITION_TALK_TING
-    size: SIZE_WINDOW
-  - content: PIC_SPEEK_P_LEFT
-    position: POSITION_SPEEK
-    size: SIZE_WINDOW
-- type: activity
-  activity: Text
-  background: WHITE
-  animateIn:
-    animate: activityLinearMove
-    start: (1,0)
-    end: (0,0)
-  texts:
-  - content: 呵 那我还有点用
-    position: (CENTER,LINE_2)
-  - content: (尬住)
-    position: (CENTER,LINE_1)
-  pics:
-  - content: WHITE
-  - content: PIC_TALK_FANG
-    position: POSITION_TALK_FANG
-    size: SIZE_WINDOW
-  - content: PIC_SPEEK_B_RIGHT
-    position: POSITION_SPEEK
-    size: SIZE_WINDOW
-# 分支 一直很开心 DONE
-
-- type: activity
-  activity: Text
-  background: WHITE
-  tag: not_talk
-  texts:
-  - content: 你们的对话停留
-    position: (CENTER,LINE_6)
-  pics:
-  - content: WHITE
-- type: activity
-  activity: Text
-  background: WHITE
-  texts:
-  - content: 你们的对话停留
-    position: (CENTER,LINE_6)
-  - content: 其实你好像也有很多话想说
-    position: (CENTER,LINE_5)
-  pics:
-  - content: WHITE
-- type: activity
-  activity: Text
-  background: WHITE
-  texts:
-  - content: 你们的对话停留
-    position: (CENTER,LINE_6)
-  - content: 其实你好像也有很多话想说
-    position: (CENTER,LINE_5)
-  - content: 却又不知如何开口
-    position: (CENTER,LINE_4)
-  pics:
-  - content: WHITE
-- type: activity
-  activity: Text
-  background: WHITE
-  texts:
-  - content: 查找聊天记录
-    position: (0.1,0)
-  - content: 日  一  二  三  四  五  六
-    position: (0.05,0.1)
-  - content: 2024年3月
-    position: (0.1,0.2)
-    color: GREY
-  - content: 24  25   26   27  28   29  30
-    position: (0.05,0.3)
-    color: GREY
-  - content: 31
-    position: (0.05,0.4)
-  - content: 2024年4月
-    position: (0.1,0.5)
-    color: GREY
-  - content: 1
-    position: (0.2,0.6)
-    color: WHITE
-  - content: 今天
-    position: (0.17,0.7)
-    color: (135, 184, 83)
-    size: FONT_SMALL
-  pics:
-  - content: WHITE
-  - content: ICON_GREEN_CIRCLE
-    size: (0.1,0.1)
-    position: (0.17,0.6)
-- type: activity
-  activity: Text
-  background: WHITE
-  texts:
-  - content: 查找聊天记录
-    position: (0.1,0)
-  - content: 日  一  二  三  四  五  六
-    position: (0.05,0.1)
-  - content: 2024年3月
-    position: (0.1,0.2)
-    color: GREY
-  - content: 24  25   26   27  28   29  30
-    position: (0.05,0.3)
-    color: GREY
-  - content: 31
-    position: (0.05,0.4)
-  - content: 2024年4月
-    position: (0.1,0.5)
-    color: GREY
-  - content: 1
-    position: (0.2,0.6)
-    color: WHITE
-  - content: 今天
-    position: (0.17,0.7)
-    color: (135, 184, 83)
-    size: FONT_SMALL
-  - content: 今天是愚人节诶
-    position: (CENTER,LINE_2)
-  - content: 要不要找小方聊天呢？
-    position: (CENTER,LINE_1)
-  pics:
-  - content: WHITE
-  - content: PIC_SPEEK_P_LEFT
-    position: (0,0.25)
-    size: SIZE_WINDOW
-  - content: ICON_GREEN_CIRCLE
-    size: (0.1,0.1)
-    position: (0.17,0.6)
-# -------------------------------------------------CHOICE
-- type: activity
-  activity: Choice
-  background: WHITE
-  texts:
-  - content: 查找聊天记录
-    position: (0.1,0)
-  - content: 日  一  二  三  四  五  六
-    position: (0.05,0.1)
-  - content: 2024年3月
-    position: (0.1,0.2)
-    color: GREY
-  - content: 24  25   26   27  28   29  30
-    position: (0.05,0.3)
-    color: GREY
-  - content: 31
-    position: (0.05,0.4)
-  - content: 2024年4月
-    position: (0.1,0.5)
-    color: GREY
-  - content: 1
-    position: (0.2,0.6)
-    color: WHITE
-  - content: 今天
-    position: (0.17,0.7)
-    color: (135, 184, 83)
-    size: FONT_SMALL
-  - content: A 随便闲聊   B 不理他
-    position: (CENTER,LINE_2)
-  - content: C 骗他我有男朋友了
-    position: (CENTER,LINE_1)
-  pics:
-  - content: WHITE
-  - content: PIC_SPEEK_P_LEFT
-    position: (0,0.25)
-    size: SIZE_WINDOW
-  - content: ICON_GREEN_CIRCLE
-    size: (0.1,0.1)
-    position: (0.17,0.6)
-- type: goto
-  if: CHOICE_A
-  goto_tag: april_chat
-- type: goto
-  if: CHOICE_B
-  goto_tag: april_not_chat
-- type: goto
-  if: CHOICE_C
-  goto_tag: april_boyfriend
-
-
-
-# rechoose man
-- type: goto
-  if: True
-  conf: CONF_START
-  state: 7
+  conf: CONF_TAN_FANG_BOYFRIEND
+  state: 0
