--- a/conf/fang-nochat.yaml
+++ b/conf/fang-nochat.yaml
@@ -1,5 +1,186 @@
 gameloop:
 
+- type: activity
+  activity: Text
+  background: WHITE
+  texts:
+  - content: 查找聊天记录
+    position: (0.1,0)
+  - content: 日  一  二  三  四  五  六
+    position: (0.05,0.1)
+  - content: 2024年3月
+    position: (0.1,0.2)
+    color: GREY
+  - content: 24  25   26   27  28   29  30
+    position: (0.05,0.3)
+    color: GREY
+  - content: 31
+    position: (0.05,0.4)
+  - content: 2024年4月
+    position: (0.1,0.5)
+    color: GREY
+  - content: 1
+    position: (0.2,0.6)
+    color: GREY
+  - content: 2
+    position: (0.34,0.6)
+    color: WHITE
+  - content: 今天
+    position: (0.31,0.7)
+    color: (135, 184, 83)
+    size: FONT_SMALL
+  pics:
+  - content: WHITE
+  - content: ICON_GREEN_CIRCLE
+    size: (0.1,0.1)
+    position: (0.3,0.6)
+
+- type: activity
+  activity: Text
+  background: WHITE
+  texts:
+  - content: 查找聊天记录
+    position: (0.1,0)
+  - content: 日  一  二  三  四  五  六
+    position: (0.05,0.1)
+  - content: 2024年3月
+    position: (0.1,0.2)
+    color: GREY
+  - content: 24  25   26   27  28   29  30
+    position: (0.05,0.3)
+    color: GREY
+  - content: 31
+    position: (0.05,0.4)
+  - content: 2024年4月
+    position: (0.1,0.5)
+    color: GREY
+  - content: 1    2
+    position: (0.2,0.6)
+    color: GREY
+  - content: 3
+    position: (0.5,0.6)
+    color: WHITE
+  - content: 今天
+    position: (0.47,0.7)
+    color: (135, 184, 83)
+    size: FONT_SMALL
+  pics:
+  - content: WHITE
+  - content: ICON_GREEN_CIRCLE
+    size: (0.1,0.1)
+    position: (0.46,0.6)
+
+- type: activity
+  activity: Text
+  background: WHITE
+  texts:
+  - content: 查找聊天记录
+    position: (0.1,0)
+  - content: 日  一  二  三  四  五  六
+    position: (0.05,0.1)
+  - content: 2024年3月
+    position: (0.1,0.2)
+    color: GREY
+  - content: 24  25   26   27  28   29  30
+    position: (0.05,0.3)
+    color: GREY
+  - content: 31
+    position: (0.05,0.4)
+  - content: 2024年4月
+    position: (0.1,0.5)
+    color: GREY
+  - content: 1    2    3    4    5   6
+    position: (0.2,0.6)
+    color: GREY
+  - content: 7    8    9
+    position: (0.05,0.7)
+    color: GREY
+  - content: 10
+    position: (0.48,0.7)
+    color: WHITE
+  - content: 今天
+    position: (0.47,0.8)
+    color: (135, 184, 83)
+    size: FONT_SMALL
+  pics:
+  - content: WHITE
+  - content: ICON_GREEN_CIRCLE
+    size: (0.1,0.1)
+    position: (0.46,0.7)
+
+- type: activity
+  activity: Text
+  background: WHITE
+  texts:
+  - content: 2025
+    position: (CENTER,CENTER)
+    size: FONT_TITLE
+  pics:
+  - content: WHITE
+
+- type: activity
+  activity: Text
+  background: WHITE
+  texts:
+  - content: 2026
+    position: (CENTER,CENTER)
+    size: FONT_TITLE
+  pics:
+  - content: WHITE
+
+- type: activity
+  activity: Text
+  background: WHITE
+  texts:
+  - content: ...
+    position: (CENTER,CENTER)
+    size: FONT_TITLE
+  pics:
+  - content: WHITE
+
+- type: activity
+  activity: Text
+  background: WHITE
+  texts:
+  - content: 这下你知道了
+    position: (CENTER,LINE_6)
+  pics:
+  - content: WHITE
+
+- type: activity
+  activity: Text
+  background: WHITE
+  texts:
+  - content: 这下你知道了
+    position: (CENTER,LINE_6)
+  - content: 永远不要对一个直男
+    position: (CENTER,LINE_5)
+  pics:
+  - content: WHITE
+
+- type: activity
+  activity: Text
+  background: WHITE
+  texts:
+  - content: 这下你知道了
+    position: (CENTER,LINE_6)
+  - content: 永远不要对一个直男
+    position: (CENTER,LINE_5)
+  - content: 欲擒故纵
+    position: (CENTER,LINE_4)
+  pics:
+  - content: WHITE
+
+- type: activity
+  activity: Text
+  background: TANTAN_BACKGROUND
+  texts:
+  - content: 开始你的下一次匹配吧
+    position: (CENTER,CENTER)
+    color: WHITE
+  pics:
+  - content: TANTAN_BACKGROUND
+
 - type: goto
   if: True
   conf: CONF_START
